# pipework

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: python-ci.yml
examples/: __init__.py  example_game.py  minimal.py
pipework/core/: __init__.py  engine.py
tests/: README.md  __init__.py  conftest.py  test_engine.py  test_example_game.py
